@@ -1,0 +1,48 @@
+<?php
+
+namespace Geithware\DebugMysqlDb\Log\Writer;
+
+/*
+ * This file is part of the TYPO3 CMS project.
+ *
+ * It is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License, either version 2
+ * of the License, or any later version.
+ *
+ * For the full copyright and license information, please read the
+ * LICENSE.txt file that was distributed with this source code.
+ *
+ * The TYPO3 project - inspiring people to share!
+ */
+
+use TYPO3\CMS\Core\Log\LogRecord;
+
+ 
+/**
+ * Log writer that writes the log records into a file.
+ */
+class FileWriter extends \TYPO3\CMS\Core\Log\Writer\FileWriter
+{
+
+    /**
+     * Default log file path
+     *
+     * @var string
+     */
+    protected $defaultLogFileTemplate = '/log/database_%s.log';
+
+
+    /**
+     * Writes the log record
+     *
+     * @param LogRecord $record Log record
+     * @return WriterInterface $this
+     * @throws \RuntimeException
+     */
+    public function writeLog(LogRecord $record)
+    {
+        parent::writeLog($record);
+        debug($record, '$record'); // keep this
+    }
+}
+
